k8s/manifests/overlays/alpha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: icecharts-alpha
  labels:
    environment: alpha
    app.kubernetes.io/name: icecharts
